--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-325.8KB/s(Youtube:不良林), server: 194.124.35.42, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-10.37MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.30MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-226.7KB/s(Youtube:不良林), server: 194.124.35.42, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-179.1KB/s(Youtube:不良林), server: 194.124.35.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 塞浦路斯-650.1KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇺🇸 美国-181.5KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 61c4c45e-d5c8-47ed-ae28-cee95f09b3b7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇸🇬 新加坡-256.6KB/s(Youtube:不良林), server: 194.124.35.42, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇬🇧 英国-3.32MB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
-  - {name: 🇩🇪 德国-425.2KB/s(Youtube:不良林), server: ppy-cmcc.0098dns02in.work, port: 26011, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-373.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 26011, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-312.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 26015, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.26MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-322.8KB/s(Youtube:不良林), server: 194.124.35.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.04MB/s(Youtube:不良林), server: rbzz.jddsb.cf, port: 1003, type: vmess, uuid: 104ef5de-c177-464c-b3cc-6063a4afe97a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: rbzz.jddsb.cf}}
+  - {name: 🇨🇳 中国-384.5KB/s(Youtube:不良林), server: 36.134.53.194, port: 26062, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.09MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇨🇦 加拿大-1.61MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-325.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-226.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-179.1KB/s(Youtube:不良林)
       - 塞浦路斯-650.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-181.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-256.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-425.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-325.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-226.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-179.1KB/s(Youtube:不良林)
       - 塞浦路斯-650.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-181.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-256.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-425.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-325.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-226.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-179.1KB/s(Youtube:不良林)
       - 塞浦路斯-650.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-181.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-256.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-425.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-325.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-226.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-179.1KB/s(Youtube:不良林)
       - 塞浦路斯-650.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-181.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-256.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-425.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-325.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-226.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-179.1KB/s(Youtube:不良林)
       - 塞浦路斯-650.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-181.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-256.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-425.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-325.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-226.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-179.1KB/s(Youtube:不良林)
       - 塞浦路斯-650.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-181.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-256.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-425.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-325.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-226.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-179.1KB/s(Youtube:不良林)
       - 塞浦路斯-650.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-181.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-256.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-425.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
