--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-1.36MB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
-  - {name: 🇫🇷 法国-663.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇬🇧 英国-881.8KB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
   - {name: 🇺🇸 美国-1014.2KB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇫🇷 法国-1.36MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇬🇧 英国-617.0KB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇦 加拿大-772.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-3.89MB/s(Youtube:不良林), server: az1.bgp.zhongzhuan1.xyz, port: 41535, type: trojan, password: 4d128058-ee75-4f03-8a4a-6d090586200b, sni: az1.bgp.zhongzhuan1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-166.5KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.30MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-663.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-601.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 香港-1.54MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.08MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.71MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-649.5KB/s(Youtube:不良林), server: az1.bgp.zhongzhuan1.xyz, port: 22818, type: trojan, password: 4d128058-ee75-4f03-8a4a-6d090586200b, sni: az1.bgp.zhongzhuan1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-663.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇬🇧 英国-881.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1014.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇬🇧 英国-617.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-772.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-166.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-663.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-601.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.54MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-649.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-663.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇬🇧 英国-881.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1014.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇬🇧 英国-617.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-772.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-166.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-663.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-601.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.54MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-649.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-663.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇬🇧 英国-881.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1014.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇬🇧 英国-617.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-772.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-166.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-663.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-601.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.54MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-649.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.54MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.71MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-663.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇬🇧 英国-881.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1014.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇬🇧 英国-617.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-772.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-166.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-663.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-601.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.54MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-649.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-663.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇬🇧 英国-881.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1014.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇬🇧 英国-617.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-772.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-166.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-663.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-601.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.54MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-649.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-663.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇬🇧 英国-881.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1014.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇬🇧 英国-617.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-772.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-166.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-663.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-601.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.54MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-649.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-663.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇬🇧 英国-881.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1014.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇬🇧 英国-617.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-772.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-166.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-663.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-601.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.54MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-649.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
