--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-853.8KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-881.8KB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
-  - {name: 🇬🇧 英国-948.5KB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 中国-3.00MB/s(Youtube:不良林), server: az1.bgp.zhongzhuan1.xyz, port: 41535, type: trojan, password: 4d128058-ee75-4f03-8a4a-6d090586200b, sni: az1.bgp.zhongzhuan1.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-601.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: rn.tianxie.jp.eu.org, port: 443, type: trojan, password: c06bb8e0-7989-4885-9560-df320b7ce1d3, sni: rn.tianxie.jp.eu.org, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-418.4KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-2.24MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.11MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-853.8KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇫🇷 法国-617.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-1.78MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: rn.tianxie.jp.eu.org, port: 443, type: trojan, password: c06bb8e0-7989-4885-9560-df320b7ce1d3, sni: rn.tianxie.jp.eu.org, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.47MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.19MB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-853.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-881.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-948.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-601.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-418.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-853.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-617.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-853.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-881.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-948.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-601.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-418.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-853.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-617.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-853.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-881.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-948.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-601.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-418.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-853.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-617.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-853.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-881.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-948.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-601.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-418.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-853.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-617.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-853.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-881.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-948.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-601.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-418.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-853.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-617.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-853.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-881.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-948.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-601.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-418.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-853.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-617.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-853.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-881.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-948.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-601.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-418.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-853.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-617.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
